sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:7: error: not found: value cpt
  while (cpt != 0 || cpt2 != 0)  {
         ^